@@ -2,6 +2,15 @@ package com.safefoodtruck.sft.notification.service;
 
 import static com.safefoodtruck.sft.common.util.EventType.*;
 
+import java.util.List;
+import java.util.Set;
+
+import org.modelmapper.ModelMapper;
+import org.springframework.scheduling.annotation.Async;
+import org.springframework.scheduling.annotation.EnableAsync;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import com.safefoodtruck.sft.favorites.domain.Favorites;
 import com.safefoodtruck.sft.favorites.repository.FavoritesRepository;
 import com.safefoodtruck.sft.globalnotification.dto.AcceptedNotificationDto;
@@ -14,6 +23,7 @@ import com.safefoodtruck.sft.globalnotification.dto.RegistReviewNotificationDto;
 import com.safefoodtruck.sft.globalnotification.dto.RejcetedNotificationDto;
 import com.safefoodtruck.sft.globalnotification.service.GlobalNotificationService;
 import com.safefoodtruck.sft.member.domain.Member;
+import com.safefoodtruck.sft.member.exception.NotFoundMemberException;
 import com.safefoodtruck.sft.member.repository.MemberRepository;
 import com.safefoodtruck.sft.notification.domain.Notification;
 import com.safefoodtruck.sft.notification.dto.SelectNotificationResponseDto;
@@ -21,18 +31,9 @@ import com.safefoodtruck.sft.notification.dto.SendNotificationRequestDto;
 import com.safefoodtruck.sft.notification.exception.NotFoundNotificationException;
 import com.safefoodtruck.sft.notification.exception.NotSameUserException;
 import com.safefoodtruck.sft.notification.repository.NotificationRepository;
-import com.safefoodtruck.sft.store.exception.StoreNotFoundException;
-import com.safefoodtruck.sft.store.repository.StoreRepository;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.modelmapper.ModelMapper;
-import org.springframework.scheduling.annotation.Async;
-import org.springframework.scheduling.annotation.EnableAsync;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -51,7 +52,8 @@ public class NotificationServiceImpl implements NotificationService {
     @Override
     public void sendNotification(SendNotificationRequestDto sendNotificationRequestDto) {
         String targetEmail = sendNotificationRequestDto.getTargetEmail();
-        Member member = memberRepository.findByEmail(targetEmail);
+        Member member = memberRepository.findByEmail(targetEmail).orElseThrow(
+            NotFoundMemberException::new);
 
         notificationRepository.save(Notification.builder()
             .member(member)
@@ -63,15 +65,15 @@ public class NotificationServiceImpl implements NotificationService {
     @Override
     @Transactional
     public List<SelectNotificationResponseDto> selectNotifications(String userEmail) {
-        Member member = memberRepository.findByEmail(userEmail);
+        Member member = memberRepository.findByEmail(userEmail).orElseThrow(
+            NotFoundMemberException::new);
         return member.getNotificationList().stream()
             .map(notification -> {
                 SelectNotificationResponseDto dto = modelMapper.map(notification,
                     SelectNotificationResponseDto.class);
                 dto.setEmail(notification.getMember().getEmail());
                 return dto;
-            })
-            .collect(Collectors.toList());
+            }).toList();
     }
 
     @Override
@@ -109,7 +111,8 @@ public class NotificationServiceImpl implements NotificationService {
     @Transactional
     @Override
     public void acceptedSendNotify(String orderEmail, String storeName, Integer orderId) {
-        Member member = memberRepository.findByEmail(orderEmail);
+        Member member = memberRepository.findByEmail(orderEmail).orElseThrow(
+            NotFoundMemberException::new);
         String info = storeName + " 푸드트럭에서 주문을 수락하였습니다.";
 
         notificationRepository.save(Notification.builder()
@@ -125,7 +128,8 @@ public class NotificationServiceImpl implements NotificationService {
     @Transactional
     @Override
     public void rejectedSendNotify(String orderEmail, String storeName) {
-        Member member = memberRepository.findByEmail(orderEmail);
+        Member member = memberRepository.findByEmail(orderEmail).orElseThrow(
+            NotFoundMemberException::new);
         String info = storeName + " 푸드트럭에서 주문을 거절하였습니다.";
 
         notificationRepository.save(Notification.builder()
@@ -141,7 +145,8 @@ public class NotificationServiceImpl implements NotificationService {
     @Transactional
     @Override
     public void completedSendNotify(String orderEmail, String storeName) {
-        Member member = memberRepository.findByEmail(orderEmail);
+        Member member = memberRepository.findByEmail(orderEmail).orElseThrow(
+            NotFoundMemberException::new);
         String info = storeName + " 푸드트럭에서 조리를 완료하였습니다.";
 
         notificationRepository.save(Notification.builder()
@@ -157,7 +162,7 @@ public class NotificationServiceImpl implements NotificationService {
     @Transactional
     @Override
     public void orderedSendNotify(String ownerEmail) {
-        Member member = memberRepository.findByEmail(ownerEmail);
+        Member member = memberRepository.findByEmail(ownerEmail).orElseThrow(NotFoundMemberException::new);
         String info = "주문이 접수되었어요!";
 
         notificationRepository.save(Notification.builder()
